# cipherpay-zkaudit

./: .cursorignore  .gitignore  Cargo.toml  README.md
config/: .gitkeep  default.toml
docs/: .gitkeep  architecture.md
scripts/: .gitkeep  build.sh  deploy.sh  test.sh
src/: lib.rs
tests/: .gitkeep  integration_test.rs
tests/common/: mod.rs
tests/unit/: zkpop_tests.rs  zkscanner_tests.rs
zkpop/: zkpop.rs
zkproofofpayment/: Cargo.toml
zkproofofpayment/guest/: Cargo.toml  audit.rs  main.rs  main_audit.rs  main_merkle.rs  main_nullifier.rs  main_transfer.rs  main_withdraw.rs  main_zkcondition.rs  main_zksplit.rs  main_zkstream.rs  merkle.rs
zkproofofpayment/host/: main.rs  test_vectors.rs  utils.rs
zkproofofpayment/src/: .gitkeep
zkscanner/: Cargo.toml  decrypt_notes.rs  lib.rs
zkverifier/: Cargo.toml  main.rs
zkverifier-ui/: package-lock.json  package.json
zkverifier-ui/rust/: verifier.rs
zkverifier-ui/src/app/: page.module.css  page.tsx
zkverifier-ui/src/app/api/: verify.ts
